--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <!-- this is for dist build to access css -->
         <link rel="stylesheet" href="app.css">
         <!-- Favicons stuff-->
+        <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
        <div id="root"></div>
