--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- this is for dist build to access css -->
-        <link rel="stylesheet" href="app.css">
+       <!-- <link rel="stylesheet" href="app.css"> -->
         <!-- Favicons stuff-->
         <link rel="shortcut icon" href="favicon.ico">
     </head>
