--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Elliottscode Portfolio</title>
+        <title>Elliottscode</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- this is for dist build to access css -->
